style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");

:root {
  --light: #f6f6f9;
  --primary: #1976d2;
  --light-primary: #cfe8ff;
  --grey: #eee;
  --dark-grey: #aaaaaa;
  --dark: #363949;
  --danger: #d32f2f;
  --light-danger: #fecdd3;
  --warning: #fbc02d;
  --light-warning: #fff2c6;
  --success: #388e3c;
  --light-success: #bbf7d0;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

/* popup size */
html {
  width: 400px; /* max: 1000px */
  height: 500px; /* max: 750px */
}

.main-content {
  position: fixed;
  width: 100%;
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.main-content ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main-content ul .item {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 15px;
}

/* Style général pour les éléments de la classe .label dans le contexte .main-content */
.main-content ul .label {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 200px;
  height: 30px;
  background-color: #1976d2;
  border-radius: 5px;
  margin: 5px;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  position: relative; /* Nécessaire pour le badge "NEW" */
}

.main-content ul .convert {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 30px;
  background-color: #ffff;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  transition: transform 0.3s;
}
.main-content ul .convert:hover {
  transform: scale(1.2);
}

.main-content ul li a {
  color: white;
  text-decoration: none;
  font-size: 14px;
}

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
  padding: 20px;
}

.footer .main {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.social {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 50px;
  background-color: #ffff;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  transition: transform 0.3s;
}
.social:hover {
  transform: scale(1.2);
}

.discord {
  color: #363949;
}

a {
  color: black;
}

.text-footer {
  margin-top: 15px;
}

.merge {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 30px;
  background-color: #ffff;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  transition: transform 0.3s;
}
.merge:hover {
  transform: scale(1.2);
}

/* Assurez-vous que le li parent utilise Flexbox, et appliquez le badge uniquement à la classe label-new */
.main-content ul li.label-new {
  display: flex;
  justify-content: center; /* Centrer horizontalement */
  align-items: center; /* Centrer verticalement */
  padding-right: 20px; /* Assurez-vous que le badge n'affecte pas le contenu */
  width: 200px;
  height: 30px;
  background-color: #1976d2;
  border-radius: 5px;
  margin: 5px;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  position: relative; /* Pour le badge "NEW" */
}

/* Ajout du badge "NEW" uniquement à .label-new */
.main-content ul li.label-new::after {
  content: "New";
  position: absolute;
  top: -10px;
  right: -10px;
  background-color: white;
  color: #1976d2;
  padding: 2px 6px;
  font-size: 10px;
  border-radius: 5px;
  z-index: 1;
}

.tooltip {
  visibility: hidden;
  position: absolute;
  background-color: white;
  color: #fff;
  padding: 5px;
  width: 150px;
  border-radius: 6px;
  top: -100%;
  left: 50%;
  transform: translateX(-50%);
}

.social:hover .tooltip {
  visibility: visible;
}

